--- a/Documentation/system-requirements.tex
+++ b/Documentation/system-requirements.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 \begin{document}
-Test of System Requirements Document
+\title{System Requirements Document}
+\author{Christopher Waschenko}
+\date{August 2025}
 
 \end{document}
