--- a/Documentation/system-requirements.tex
+++ b/Documentation/system-requirements.tex
@@ -1,7 +1,8 @@
 \documentclass{article}
-\begin{document}
-\title{System Requirements Document}
-\author{Christopher Waschenko}
-\date{August 2025}
 
+\title{System Requirements Document}
+\author{Christopher Waschenko, Johan Gamboa}
+
+\begin{document}
+Hello World
 \end{document}
