--- a/Documentation/system-requirements.tex
+++ b/Documentation/system-requirements.tex
@@ -1,7 +1,8 @@
-\documentclass{article}
+\documentclass[12pt, letterpaper]{article}
+\title{My first LaTeX document}
+\author{Hubert Farnsworth\thanks{Funded by the Overleaf team.}}
+\date{August 2022}
 \begin{document}
-
-\title{System Requirements Document}
-\author{Christopher Waschenko, Johan Gamboa}
-Hello World
+\maketitle
+We have now added a title, author and date to our first \LaTeX{} document!
 \end{document}
